供应链V1.0 (数据权限优化)